clean up handle input functions

--- a/Set_up_conversational_interface_5.ipynb
+++ b/Set_up_conversational_interface_5.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,9 @@
      "output_type": "stream",
      "text": [
       "YouTube Search URL: https://www.youtube.com/results?search_query=how+to+preheat+oven\n",
-      "Google Search URL: https://www.google.com/search?q=how+to+preheat+oven\n"
+      "Google Search URL: https://www.google.com/search?q=how+to+preheat+oven\n",
+      "True\n",
+      "True\n"
      ]
     }
    ],
@@ -332,6 +334,21 @@
     "    \n",
     "    pattern = r'\\bhow\\b'\n",
     "    return bool(re.search(pattern, input_string, re.IGNORECASE))\n",
+    "\n",
+    "def contains_ingredient(input_string):\n",
+    "    \n",
+    "    \n",
+    "    pattern = r'\\bingredients?\\b'  \n",
+    "    return bool(re.search(pattern, input_string, re.IGNORECASE))\n",
+    "\n",
+    "print(contains_ingredient(\"The truth is there is no secret ingredient\"))\n",
+    "\n",
+    "print(contains_ingredient(\"May be, the secret ingredients are love and something random\"))\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "\n",
     "\n",
     "\n",
@@ -503,41 +520,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Step 2: Sprinkle lightly with salt.\n",
-      "Do you have any questions regarding this step?\n",
-      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
-      "Step 1: Lay eggplant slices on paper towels.\n",
-      "Do you have any questions regarding this step?\n",
-      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
-      "Step 7: Drain on paper towels.\n",
-      "Do you have any questions regarding this step?\n",
-      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
-      "Step 8: Set aside.\n",
-      "Do you have any questions regarding this step?\n",
-      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
-      "Step 5: Warm olive oil in a skillet over high heat.\n",
-      "Do you have any questions regarding this step?\n",
-      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
-      "Step 2: Sprinkle lightly with salt.\n",
-      "Do you have any questions regarding this step?\n",
-      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
-      "For more details about 'sprinkle', visit: https://www.google.com/search?q=sprinkle+as+a+method+of+cooking\n",
-      "For more details about 'salt to taste', visit: https://www.google.com/search?q=salt+to+taste\n",
-      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have.\n",
-      "For more details about how to 'sprinkle', visit: https://www.youtube.com/results?search_query=how+do+I+sprinkle+in+the+context+of+cooking\n",
-      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have.\n",
-      "For more details, visit: https://www.youtube.com/results?search_query=how+do+I+deep-fry+fish+in+the+context+of+cooking\n",
-      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import spacy\n",
     "import re\n",
@@ -582,19 +567,8 @@
     "    context.current_step =  step - 1\n",
     "    display_step(context)\n",
     "    \n",
-    "\n",
-    "\n",
-    "def handle_input(context, user_input):\n",
     "    \n",
-    "    if contains_what(user_input):\n",
-    "        result = handle_what(context, user_input)\n",
-    "        print(result)\n",
-    "        return\n",
-    "    \n",
-    "    if contains_how(user_input):\n",
-    "        result = handle_how(context, user_input)\n",
-    "        print(result)\n",
-    "        return \n",
+    "def handle_navigations(context, user_input):\n",
     "    \n",
     "    doc = nlp(user_input.lower())\n",
     "\n",
@@ -644,8 +618,95 @@
     "                print(\"Invalid step number.\")\n",
     "            return\n",
     "    \n",
-    "    #to do later\n",
+    "    \n",
     "    return\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 2: Sprinkle lightly with salt.\n",
+      "Do you have any questions regarding this step?\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
+      "Step 1: Lay eggplant slices on paper towels.\n",
+      "Do you have any questions regarding this step?\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
+      "Step 7: Drain on paper towels.\n",
+      "Do you have any questions regarding this step?\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
+      "Step 8: Set aside.\n",
+      "Do you have any questions regarding this step?\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
+      "Step 5: Warm olive oil in a skillet over high heat.\n",
+      "Do you have any questions regarding this step?\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
+      "Step 2: Sprinkle lightly with salt.\n",
+      "Do you have any questions regarding this step?\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have\n",
+      "For more details about 'sprinkle', visit: https://www.google.com/search?q=sprinkle+as+a+method+of+cooking\n",
+      "For more details about 'salt to taste', visit: https://www.google.com/search?q=salt+to+taste\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have.\n",
+      "For more details about how to 'sprinkle', visit: https://www.youtube.com/results?search_query=how+do+I+sprinkle+in+the+context+of+cooking\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have.\n",
+      "For more details, visit: https://www.youtube.com/results?search_query=how+do+I+deep-fry+fish+in+the+context+of+cooking\n",
+      "You can press '1' for the next step, '2' for the list of ingredients, or 'quit' to end the session or any other questions you have.\n",
+      "The ingredients for 'Moussaka' are as follows:\n",
+      "  • 3 eggplants, peeled and cut lengthwise into 1/2 inch thick slices\n",
+      "  • salt to taste\n",
+      "  • 1/4 cup olive oil\n",
+      "  • 1 tablespoon butter\n",
+      "  • 1 pound lean ground beef\n",
+      "  • 2 onions, chopped\n",
+      "  • 1 clove garlic, minced\n",
+      "  • ground black pepper to taste\n",
+      "  • 2 tablespoons dried parsley\n",
+      "  • 1/2 teaspoon fines herbs\n",
+      "  • 1/4 teaspoon ground cinnamon\n",
+      "  • 1/2 teaspoon ground nutmeg, divided\n",
+      "  • 1 (8 ounce) can tomato sauce\n",
+      "  • 1/2 cup red wine\n",
+      "  • 1 egg, beaten\n",
+      "  • 4 cups milk\n",
+      "  • 1/2 cup butter\n",
+      "  • 6 tablespoons all-purpose flour\n",
+      "  • ground white pepper, to taste\n",
+      "  • 3/2 cups freshly grated Parmesan cheese\n",
+      "\n",
+      "Would you like to go back to the steps, or do you have any other questions?\n",
+      "You can press '1' for the next step, '2' for the list of ingredients or 'quit' to end the session or any other questions you have\n"
+     ]
+    }
+   ],
+   "source": [
+    "def handle_input(context, user_input):\n",
+    "    \n",
+    "    if contains_ingredient(user_input):\n",
+    "        \n",
+    "        display_ingredients(context)\n",
+    "        return\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    if contains_what(user_input):\n",
+    "        result = handle_what(context, user_input)\n",
+    "        print(result)\n",
+    "        return\n",
+    "    \n",
+    "    if contains_how(user_input):\n",
+    "        result = handle_how(context, user_input)\n",
+    "        print(result)\n",
+    "        return\n",
+    "    \n",
+    "    handle_navigations(context, user_input) \n",
+    "    \n",
+    "    \n",
     "context = Context()\n",
     "context.current_step  = 2\n",
     "recipe =  get_recipe_from_url(\"https://www.allrecipes.com/recipe/19644/moussaka/\")\n",
@@ -658,7 +719,8 @@
     "handle_input(context, \"go back to the second step\")\n",
     "handle_input(context, \"what is that?\")\n",
     "handle_input(context, \"how do I do that?\")\n",
-    "handle_input(context, \"how do I deep-fry fish\")\n"
+    "handle_input(context, \"how do I deep-fry fish\")\n",
+    "handle_input(context, \"show me the ingredients\")"
    ]
   },
   {
