current step parameter questions

--- a/Set_up_conversational_interface_5.ipynb
+++ b/Set_up_conversational_interface_5.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -340,6 +340,28 @@
     "    \n",
     "    pattern = r'\\bingredients?\\b'  \n",
     "    return bool(re.search(pattern, input_string, re.IGNORECASE))\n",
+    "\n",
+    "def is_temperature_related(input_string):\n",
+    "    \n",
+    "    pattern = r'\\b(temperature|hot|cold|warm|cool|heat|degrees?|celsius|fahrenheit|temp|temps)\\b'\n",
+    "    \n",
+    "    \n",
+    "    return bool(re.search(pattern, input_string, re.IGNORECASE))\n",
+    "\n",
+    "def is_duration_related(prompt):\n",
+    "    \n",
+    "    pattern = r'\\b(how long|how many minutes?|time|duration|minutes?|hours?|seconds?|when)\\b'\n",
+    "    \n",
+    "    return bool(re.search(pattern, prompt, re.IGNORECASE))\n",
+    "\n",
+    "\n",
+    "def is_amount_related(prompt):\n",
+    "    \n",
+    "    \n",
+    "    pattern = r'\\b(how much|amount|quantity|measure|measurement|portion|serving|use)\\b'\n",
+    "    \n",
+    "    return bool(re.search(pattern, prompt, re.IGNORECASE))\n",
+    "\n",
     "\n",
     "print(contains_ingredient(\"The truth is there is no secret ingredient\"))\n",
     "\n",
@@ -450,7 +472,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def handle_temperature(context):\n",
+    "    \n",
+    "    current_step = context.current_recipe.steps[context.current_step - 1]  \n",
+    "    \n",
+    "\n",
+    "    result_strings = []\n",
+    "    if current_step.temps:\n",
+    "        \n",
+    "        result_strings.append( f\"Temperature : {', '.join(current_step.temps)}\" )\n",
+    "    else:\n",
+    "        \n",
+    "        method = ', '.join(current_step.methods) if current_step.methods else current_step.text\n",
+    "        query = f\"At what temperature should I {method} when preparing {context.current_recipe.title}\"\n",
+    "        result_strings.append( f\"No temperature specified. For more details, visit: {generate_google_search_url(query)}\")\n",
+    "        \n",
+    "    return \"\\n\".join(result_strings)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def handle_duration(context):\n",
+    "    \n",
+    "    \n",
+    "    current_step = context.current_recipe.steps[context.current_step - 1]  \n",
+    "    \n",
+    "    \n",
+    "    result_strings = []\n",
+    "    if current_step.times:\n",
+    "        \n",
+    "        result_strings.append(f\"Duration: {', '.join(current_step.times)}\")\n",
+    "    else:\n",
+    "        method = ', '.join(current_step.methods) if current_step.methods else current_step.text\n",
+    "        query = f\"How long should I {method} when preparing {context.current_recipe.title}\"\n",
+    "        result_strings.append(f\"No duration specified. For more details, visit: {generate_google_search_url(query)}\")\n",
+    "        \n",
+    "    return \"\\n\".join(result_strings)\n",
+    "\n",
+    "\n",
+    "def handle_amount(context, prompt):\n",
+    "    \n",
+    "    current_step = context.current_recipe.steps[context.current_step - 1]  # Convert 1-based index to 0-based\n",
+    "    mentioned_ingredients = []\n",
+    "\n",
+    "    # Check if the prompt mentions any ingredient from the step\n",
+    "    for ingredient in current_step.ingredients:\n",
+    "        if ingredient.name and re.search(rf'\\b{re.escape(ingredient.name)}\\b', prompt, re.IGNORECASE):\n",
+    "            mentioned_ingredients.append(ingredient)\n",
+    "\n",
+    "    result_strings = []\n",
+    "\n",
+    "    if mentioned_ingredients:\n",
+    "        \n",
+    "        for ingredient in mentioned_ingredients:\n",
+    "            quantity = ingredient.quantity if ingredient.quantity else \"some\"\n",
+    "            unit = ingredient.unit if ingredient.unit else \"\"\n",
+    "            result_strings.append(f\"Use {quantity} {unit} of {ingredient.name}.\")\n",
+    "    else:\n",
+    "        \n",
+    "        for ingredient in current_step.ingredients:\n",
+    "            quantity = ingredient.quantity if ingredient.quantity else \"some\"\n",
+    "            unit = ingredient.unit if ingredient.unit else \"\"\n",
+    "            result_strings.append(f\"Use {quantity} {unit} of {ingredient.name}.\")\n",
+    "    \n",
+    "    return \"\\n\".join(result_strings)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -690,6 +784,17 @@
     "    if contains_ingredient(user_input):\n",
     "        \n",
     "        display_ingredients(context)\n",
+    "        return\n",
+    "    \n",
+    "    if is_temperature_related(user_input):\n",
+    "        \n",
+    "        handle_temperature(context)\n",
+    "        return\n",
+    "    if is_amount_related(user_input):\n",
+    "        handle_amount(context, user_input)\n",
+    "        return\n",
+    "    if is_duration_related(user_input):\n",
+    "        handle_duration(context)\n",
     "        return\n",
     "    \n",
     "    \n",
