Finshed #11, added How do I do that? link to video
Finshed #11, added How do I do that? link to video

--- a/Set_up_conversational_interface_5.ipynb
+++ b/Set_up_conversational_interface_5.ipynb
@@ -505,7 +505,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "id": "ImSMzqgV14pT"
       },
@@ -513,10 +513,16 @@
       "source": [
         "def handle_how(context, input_text):\n",
         "    tq = \"How to\"\n",
-        "    w = input_text.split(tq, 1)[1].strip()\n",
+        "    hd = \"how do I do that\"\n",
         "    if tq in input_text:\n",
-        "        Y_Link = generate_youtube_search_url(w)\n",
-        "        print(f\"Here is relevant Video Link: {Y_Link}\")\n",
+        "        w = input_text.split(tq, 1)[1].strip()\n",
+        "        return f\"Here is relevant Video Link: {generate_youtube_search_url(w)}\"\n",
+        "    elif hd in input_text:\n",
+        "        current_step = context.current_recipe.steps[context.current_step - 1]\n",
+        "        if current_step.methods:\n",
+        "            FM = current_step.methods[0]\n",
+        "            query = f\"How do I {FM} for the cooking\"\n",
+        "            return f\"{FM}: Link-- {generate_youtube_search_url(query)}\"\n",
         "    else:\n",
         "        None\n",
         "\n",
