--- a/parser.ipynb
+++ b/parser.ipynb
@@ -33,7 +33,7 @@
      "text": [
       "Collecting en-core-web-md==3.8.0\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl (33.5 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.5/33.5 MB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0mm\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.5/33.5 MB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
       "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
       "You can now load the package via spacy.load('en_core_web_md')\n"
      ]
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,10 +460,10 @@
     "    print()\n",
     "\n",
     "print_hypernym_paths(\"paper\")\n",
-    "print(NounType.from_str(\"season\"))\n",
-    "print(NounType.from_str(\"tin\"))\n",
-    "print(NounType.from_str(\"mixer\"))\n",
-    "print(NounType.from_str(\"men\"))"
+    "print(u.NounType.from_str(\"season\"))\n",
+    "print(u.NounType.from_str(\"tin\"))\n",
+    "print(u.NounType.from_str(\"mixer\"))\n",
+    "print(u.NounType.from_str(\"men\"))"
    ]
   }
  ],
