Move parsing code to `parser.py`

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -45,269 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import recipe as r\n",
-    "\n",
-    "def find_ingredient(name: str, ingredients: list[r.Ingredient]) -> list[int]:\n",
-    "    '''Finds the list of indices of the ingredients possibly being referenced'''\n",
-    "\n",
-    "    ingr_inds = []\n",
-    "    components = name.split()\n",
-    "\n",
-    "    # Remove any determiners\n",
-    "    if components[0] in ['the', 'a', 'an']:\n",
-    "        del components[0]\n",
-    "        name = ' '.join(components)\n",
-    "\n",
-    "    # If name is empty, return\n",
-    "    if not name:\n",
-    "        return ingr_inds\n",
-    "    \n",
-    "    # Initialize confidence to 1/2 of number of words\n",
-    "    max_confidence = len(components) / 2\n",
-    "\n",
-    "    for i in range(len(ingredients)):\n",
-    "        if name == ingredients[i].name:\n",
-    "            # Return if an exact match\n",
-    "            return [i]\n",
-    "        elif name in ingredients[i].name:\n",
-    "            # If a substring, add to list and limit search to other substrs\n",
-    "            ingr_inds.append(i)\n",
-    "            max_confidence = len(components) + 1\n",
-    "        elif max_confidence <= len(components):\n",
-    "            # Check how many words match and add to list if == current max or\n",
-    "            # reset list to just it + update max if >\n",
-    "            confidence = 0\n",
-    "            for wd in components:\n",
-    "                if wd in ingredients[i].name:\n",
-    "                    confidence += 1\n",
-    "            if confidence > max_confidence:\n",
-    "                ingr_inds = [i]\n",
-    "            elif confidence == max_confidence:\n",
-    "                ingr_inds.append(i)\n",
-    "    \n",
-    "    return ingr_inds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "import util as u\n",
-    "\n",
-    "def parse_and_add_step(instr: str, recipe: r.Recipe) -> None:\n",
-    "    '''Parses an instruction into maybe more steps and adds to recipe.'''\n",
-    "\n",
-    "    # Split recipe instruction into \"sentences\" for SpaCy parser\n",
-    "    steps = re.split(r'(?:\\.|;|, then)\\s+', instr)\n",
-    "\n",
-    "    for text in steps:\n",
-    "\n",
-    "        # Skip if empty\n",
-    "        if not text:\n",
-    "            continue\n",
-    "\n",
-    "        # Form a nice sentence for the step text, and initialize step\n",
-    "        text = ''.join([text[0].upper(), text[1:len(text)]])\n",
-    "        if not text.endswith('.'):\n",
-    "            text = ''.join([text, '.'])\n",
-    "        if len(recipe.steps) > 0:\n",
-    "            step: r.Step = r.Step(text, recipe.steps[-1].state)\n",
-    "        else:\n",
-    "            step: r.Step = r.Step(text, r.IngredientState(recipe.ingredients))\n",
-    "\n",
-    "        # Uncapitalize the first letter. This prevents SpaCy from reading the\n",
-    "        # first word as a proper noun (imperative sentences are less common in\n",
-    "        # its dataset).\n",
-    "        text = ''.join([text[0].lower(), text[1:len(text)]])\n",
-    "\n",
-    "        # Based on the dependency + part of speech tagging, extract necessary\n",
-    "        # information.\n",
-    "        doc = u.nlp(text)\n",
-    "        for (i, token) in enumerate(doc):\n",
-    "\n",
-    "            # If the parser interpreted an imperative sentence as an NP,\n",
-    "            # correct it.\n",
-    "            if token.dep_ == 'ROOT' and token.head.pos_ == 'NOUN':\n",
-    "                for j in range(i,-1,-1):\n",
-    "                    if j == 0 or \\\n",
-    "                        (j > 0 and doc[j-1].dep_ == 'punct'):\n",
-    "                        doc[j].dep_ = 'ROOT'\n",
-    "                        token.dep_ = 'dobj'\n",
-    "                        step.methods.append(doc[j].text)\n",
-    "                        break\n",
-    "\n",
-    "            # Extract methods\n",
-    "            if token.dep_ == 'ROOT':\n",
-    "                step.methods.append(token.text)\n",
-    "            elif token.dep_ == 'conj':\n",
-    "                if token.head.text in step.methods:\n",
-    "                    step.methods.append(token.text)\n",
-    "\n",
-    "        # Extract ingredients, tools, and temps\n",
-    "        from_prev = ''\n",
-    "        for chunk in doc.noun_chunks:\n",
-    "\n",
-    "            # If the root verb is mistakenly in the chunk, remove it.\n",
-    "            name = chunk.text\n",
-    "            if chunk.root.dep_ == 'ROOT' and step.methods[0] in name:\n",
-    "                name = name.partition(step.methods[0])[2]\n",
-    "                if not name:\n",
-    "                    continue\n",
-    "                name = name[1:-1]\n",
-    "            if from_prev:\n",
-    "                name = ' '.join([from_prev, name])\n",
-    "                from_prev = ''\n",
-    "            \n",
-    "            # If the noun chunk is not a dobj, pobj, or conj, ignore it.\n",
-    "            if chunk.root.dep_ not in ['dobj', 'pobj', 'conj', 'ROOT', 'appos']:\n",
-    "                continue\n",
-    "            \n",
-    "            # Check the type of noun\n",
-    "            ntypes = u.NounType.from_str(chunk.root.text)\n",
-    "            if u.NounType.MEASURE in ntypes and \\\n",
-    "                doc[chunk.start].ent_type_ == 'CARDINAL':\n",
-    "                from_prev = chunk.text\n",
-    "                continue\n",
-    "            if u.NounType.TOOL in ntypes:\n",
-    "                step.tools.append(chunk.text)\n",
-    "            elif u.NounType.TEMPERATURE in ntypes or \\\n",
-    "                (chunk.end-chunk.start > 2 and doc[chunk.end-2].text == 'degrees'):\n",
-    "                step.temps.append(chunk.text.strip('().:,'))\n",
-    "            else:\n",
-    "                # Check if the referenced noun is an ingredient.\n",
-    "                ref_ingr = r.Ingredient.from_str(name)\n",
-    "                if ref_ingr.name:\n",
-    "                    ingr_inds = find_ingredient(ref_ingr.name, step.state.remaining)\n",
-    "                    # Assume ambiguous ingredient means inclusive\n",
-    "                    offset = 0\n",
-    "                    for i in ingr_inds:\n",
-    "                        ingr = r.Ingredient(\n",
-    "                            ref_ingr.name if len(ingr_inds) == 1 \\\n",
-    "                                else step.state.remaining[i-offset].name,\n",
-    "                            ref_ingr.quantity if ref_ingr.quantity \\\n",
-    "                                else step.state.remaining[i-offset].quantity,\n",
-    "                            ref_ingr.unit if ref_ingr.unit \\\n",
-    "                                else step.state.remaining[i-offset].unit)\n",
-    "                        if ingr.quantity and \\\n",
-    "                            step.state.remaining[i-offset].quantity <= ingr.quantity:\n",
-    "                            del step.state.remaining[i-offset]\n",
-    "                            offset += 1\n",
-    "                        elif ingr.quantity:\n",
-    "                            step.state.remaining[i-offset].quantity -= ingr.quantity\n",
-    "                        step.ingredients.append(ingr)\n",
-    "\n",
-    "        # Extract times\n",
-    "        for ent in doc.ents:\n",
-    "            if ent.label_ == 'TIME' or ent.label_ == 'DATE':\n",
-    "                step.times.append(ent.text)\n",
-    "\n",
-    "        # Save step to recipe\n",
-    "        recipe.steps.append(step)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from html.parser import HTMLParser\n",
-    "\n",
-    "class RecipeHTMLParser(HTMLParser):\n",
-    "    '''HTML parser that handles recipes'''\n",
-    "\n",
-    "    def __init__(self, source: u.RecipeSource, convert_charrefs: bool = True) -> None:\n",
-    "        # Initialize class, setting recipe to empty\n",
-    "        self.source = source\n",
-    "        self.recipe = r.Recipe()\n",
-    "        self.current_tag = u.HTMLTag.UNKNOWN\n",
-    "        self.current_section = u.HTMLTag.UNKNOWN\n",
-    "        super().__init__(convert_charrefs=convert_charrefs)\n",
-    "    \n",
-    "    def handle_starttag(self, tag: str, attrs: list[tuple[str, str | None]]) -> None:\n",
-    "        # Save the current tag\n",
-    "        self.current_tag = u.HTMLTag.from_tag(self.source, tag, attrs)\n",
-    "        match self.current_tag:\n",
-    "            case u.HTMLTag.INGREDIENTS_LIST:\n",
-    "                self.current_section = u.HTMLTag.INGREDIENTS_LIST\n",
-    "            case u.HTMLTag.INGREDIENT:\n",
-    "                if self.current_section == u.HTMLTag.INGREDIENTS_LIST:\n",
-    "                    self.ingredient = r.Ingredient()\n",
-    "            case u.HTMLTag.STEPS_LIST:\n",
-    "                self.current_section = u.HTMLTag.STEPS_LIST\n",
-    "        return super().handle_starttag(tag, attrs)\n",
-    "    \n",
-    "    def handle_data(self, data: str) -> None:\n",
-    "        # Handle text between tags as appropriate\n",
-    "        match self.current_tag:\n",
-    "            case u.HTMLTag.TITLE:\n",
-    "                self.recipe.title = data.strip()\n",
-    "            case u.HTMLTag.OVERVIEW_LABEL:\n",
-    "                self.label = data.lower().strip(':,.! \\n\\t')\n",
-    "            case u.HTMLTag.OVERVIEW_TEXT:\n",
-    "                self.recipe.other[self.label] = data.strip()\n",
-    "            case u.HTMLTag.INGREDIENT_QUANTITY:\n",
-    "                if self.current_section == u.HTMLTag.INGREDIENTS_LIST:\n",
-    "                    self.ingredient.quantity = u.str_to_fraction(data.strip())\n",
-    "            case u.HTMLTag.INGREDIENT_UNIT:\n",
-    "                if self.current_section == u.HTMLTag.INGREDIENTS_LIST:\n",
-    "                    self.ingredient.unit = data.strip()\n",
-    "            case u.HTMLTag.INGREDIENT_NAME:\n",
-    "                if self.current_section == u.HTMLTag.INGREDIENTS_LIST:\n",
-    "                    self.ingredient.name = data.strip()\n",
-    "                    self.recipe.ingredients.append(self.ingredient)\n",
-    "            case u.HTMLTag.STEP:\n",
-    "                if self.current_section == u.HTMLTag.STEPS_LIST:\n",
-    "                    parse_and_add_step(data.strip(), self.recipe)\n",
-    "        return super().handle_data(data)\n",
-    "\n",
-    "    def handle_endtag(self, tag: str) -> None:\n",
-    "        # Reset tag\n",
-    "        self.current_tag = u.HTMLTag.UNKNOWN\n",
-    "        return super().handle_endtag(tag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "import requests\n",
-    "\n",
-    "def get_recipe_from_url(url: str) -> r.Recipe | None:\n",
-    "    '''Retrieves the text of a recipe from a given URL'''\n",
-    "\n",
-    "    # Find recipe source; return None if unsupported\n",
-    "    source = u.RecipeSource.from_url(url)\n",
-    "    if source == u.RecipeSource.UNKNOWN:\n",
-    "        return None\n",
-    "\n",
-    "    # Add appropriate HTTPS tag if not there\n",
-    "    if not re.match(r'https://www\\.', url):\n",
-    "        if re.match(r'www\\.', url):\n",
-    "            url = ''.join(['https://', url])\n",
-    "        else:\n",
-    "            url = ''.join(['https://www.', url])\n",
-    "    \n",
-    "    # Get the recipe from the page\n",
-    "    with requests.get(url) as f:\n",
-    "        parser = RecipeHTMLParser(source)\n",
-    "        parser.feed(f.text)\n",
-    "        return parser.recipe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -375,9 +113,12 @@
     }
    ],
    "source": [
-    "recipe = get_recipe_from_url(\"https://www.allrecipes.com/recipe/19644/moussaka/\")\n",
-    "# recipe = get_recipe_from_url(\"https://www.allrecipes.com/recipe/218091/classic-and-simple-meat-lasagna/\")\n",
-    "# recipe = get_recipe_from_url(\"https://www.allrecipes.com/recipe/230238/gingerbread-men-cookies/\")\n",
+    "import parser as p\n",
+    "import util as u\n",
+    "\n",
+    "recipe = p.get_recipe_from_url(\"https://www.allrecipes.com/recipe/19644/moussaka/\")\n",
+    "# recipe = p.get_recipe_from_url(\"https://www.allrecipes.com/recipe/218091/classic-and-simple-meat-lasagna/\")\n",
+    "# recipe = p.get_recipe_from_url(\"https://www.allrecipes.com/recipe/230238/gingerbread-men-cookies/\")\n",
     "print(recipe.title, '\\n')\n",
     "for ingr in recipe.ingredients:\n",
     "    print(u.fraction_to_str(ingr.quantity) if ingr.quantity else '',\n",
@@ -391,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -435,27 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- None eggplant slices\n"
-     ]
-    }
-   ],
-   "source": [
-    "ingr = r.Ingredient.from_str(\"eggplant slices\")\n",
-    "if ingr.name:\n",
-    "    print(u.fraction_to_str(ingr.quantity) if ingr.quantity else '-',\n",
-    "          ingr.unit, ingr.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
